@@ -1,7 +1,3 @@
-/clear
-/ie mineral
-/ie mineral list
-/ie mineral put "immersiveengineering:mineral/ancient_debris"
 /ie mineral put "immersiveengineering:mineral/banded_iron" 10 ~ ~
 /datapack disable "file/infinite_horizons_2_gateways"
 /reload
@@ -48,3 +44,7 @@
 /kubejs reload server-scripts
 /reload
 /gamemode creative
+/advancement revoke KCtops6 only restrictedportals:nether
+/gamemode
+/gamemode survival
+/clear
