@@ -288,6 +288,8 @@ Updated Sophisticated Storage.
 1.21.1-1.9-beta
 Added Create Mechanical Extruder (will be removing Cobblegen Galore in next update).
 
+Added create mechanical extruder recipes.
+
 Updated Applied Energistics 2.
 Updated Create.
 Updated JourneyMap.
